# BangGameEngine

./: CMakeLists.txt  CMakePresets.json  LICENSE
assets/config/: camera.json  physics.json
assets/input/: bindings.json
assets/models/: cj.mtl  plane.mtl
assets/scenes/: demo.json
assets/shaders/: common.sh  fs_basic.sc  fs_debugline.sc  varying.def.sc  vs_basic.sc  vs_debugline.sc
scripts/: build_shaders.ps1
src/: main.cpp
src/asset/: Mesh.h  ObjLoader.cpp  ObjLoader.h
src/camera/: Camera.cpp  Camera.h  CameraOrbitController.cpp  CameraOrbitController.h
src/core/: Application.cpp  Application.h  EventBus.h  Time.cpp  Time.h
src/ecs/: Entity.h  MeshRenderer.h  PhysicsComponents.h  RenderSystem.cpp  RenderSystem.h  Scene.cpp  Scene.h  Transform.cpp  Transform.h  TransformSystem.cpp  TransformSystem.h
src/input/: InputSystem.cpp  InputSystem.h
src/physics/: BulletDebugDrawer.cpp  BulletDebugDrawer.h  PhysicsAPI.cpp  PhysicsAPI.h  PhysicsCharacter.h  PhysicsDebugDraw.h  PhysicsSystem.cpp  PhysicsSystem.h
src/platform/: Win32Native.h
src/render/: Material.cpp  Material.h  Renderer.cpp  Renderer.h  Texture.cpp  Texture.h
src/resource/: MeshLoader.cpp  MeshLoader.h  ResourceManager.cpp  ResourceManager.h  TextureLoader.cpp  TextureLoader.h
src/scene/: SceneLoader.cpp  SceneLoader.h
src/window/: Window.cpp  Window.h
